arreglo footer y paddin

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           type="button" data-bs-toggle="collapse" data-bs-target="#nav" aria-controls="nav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="nav" style="margin-left: 25%">
+        <div class="collapse navbar-collapse" id="nav" style="margin-left: 20%">
           <ul class="nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
               <a class="nav-link active text-white fs-5" aria-current="page" href="#">La conferencia</a>
@@ -76,10 +76,10 @@
               conocer a miembros del evento, a otros estudiantes de Coco a Codo
               y los oradores de primer nivel que tenemos para ti. Te esperamos!
             </p>
-            <a class="btn bg-transparent btn-outline-light" href="#"
+            <a class="btn bg-transparent btn-outline-light" href="#ConvierteteOrador"
               >Quiero ser orador</a
             >
-            <a class="btn btn-success" href="#">Comprar tickets</a>
+            <a class="btn btn-success" href="./compra-tickets.html">Comprar tickets</a>
           </div>
         </div>
         <div class="carousel-item">
